static 디렉토리 설정

--- a/public/main.html
+++ b/public/main.html
@@ -19,6 +19,11 @@
         Totam necessitatibus at ratione nostrum, asperiores ipsum veniam,
         impedit tempora qui veritatis eius pariatur praesentium nulla.
     </p>
+
+    <img src="images/KakaoTalk_20210818_170028041.png">
+    <script src="main.js">
+
+    </script>
 </body>
 
 </html>
