--- a/public/form.html
+++ b/public/form.html
@@ -8,7 +8,7 @@
 
 <body>
 
-    <form action="/email_post" method="post">
+    <form action="/email/form" method="post">
         email : <input type="text" name="email"><br />
         <input type="submit">
     </form>
@@ -24,7 +24,7 @@
         document.querySelector('.ajaxsend').addEventListener('click',
             function () {
                 var inputdata = document.forms[0].elements[0].value;
-                sendAjax('http://127.0.0.1:3000/ajax_send_email', inputdata);
+                sendAjax('http://127.0.0.1:3000/email/ajax', inputdata);
             })
 
         function sendAjax(url, data) {
